--- a/email_template.html
+++ b/email_template.html
@@ -1,12 +1,10 @@
  <html>
   <head><meta charset='utf-8'></head>
   <body>
-    <p>Hi there FIRST_NAME!</p>
+    <p>Hi there <%= firstName %>!</p>
     <br>
     <p>
-      How are you doing? I'm doing well. It's been like NUM_MONTHS_SINCE_CONTACT months
-      since we last talked. I'm learning to code full-time at Fullstack Academy and enjoying 
-      my time.
+      How are you doing? I'm doing well. It's been like <%= numMonthsSinceContact%> months since we last talked. I'm learning to code full-time at Fullstack Academy and enjoying my time.
     </p>
     <p>
       I've been blogging about my experiences at Fullstack on my blog. 
